# atem-rs

./: Cargo.toml  README.md
examples/: simple.rs  switcher_info.rs
src/: command.rs  lib.rs  multiview.rs  packet.rs  parser.rs  source.rs  systeminfo.rs  tally.rs  transition.rs  upstreamkeyer.rs
src/protocol/: mod.rs
