[package]
name = "atem-rs"
version = "0.1.0"
edition = "2021"
authors = ["Peter Simonsson <peter.simonsson@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "2.8"
bytes = "1.9"
thiserror = "2.0"
tokio = { version = "1.43", features = ["net", "io-util", "sync", "rt"] }
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.43", features = ["net", "io-util", "macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"

[[example]]
name = "simple"
