[package]
name = "atem-rs"
version = "0.1.0"
edition = "2024"
authors = ["Peter Simonsson <peter.simonsson@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "2.11.1"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
zerocopy = { version = "0.8.48", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
